analogue Change Log

Version 0.6-17

	* predict.wa: deshrinking method was not being honoured when
	expanding predictions.

Version 0.6-16

	* roc: For large problems the calculation of AUC and its standard
	error could overflow the largest number R currently handles. roc()
	now has two new arguments, 'thin' and 'max.len', which allow the
	number of points on the ROC curve to be thinned to a smaller number,
	which should allow the computations to be performed. The original
	problem was reported by Diana Stralberg.

Version 0.6-15

	* tran: new 'formula' method allows simple selection or exclusion
	of variables from the set to be 'tran'sformed.

Version 0.6-14

	* tran: new transformation and standardization methods for the power
	and 4th root transformation, the log ratio transformation for
	compositional data, plus row (sample) centring.

Version 0.6-13

	* predict.wa: Now handles WA with tolerance down-weighting for
	bootstrap CV and benefits from the changes introduced in previous
	version.

Version 0.6-12

	* deshrink, deshrinkPred: New utility functions for deshrinking WA
	estimates. These replace the '*.deshrink' and 'deshrink.pred' internal
	functions used to this end to date. This provides a more extensible
	solution.

Version 0.6-11

	* tran: now converts input data to matrix using 'data.matrix' which
	deals with factor variables appropriately.

	* predict.wa, wa, WATpred: Now use faster C code for computing
	predictions from WA models with tolerance down-weighting.

Version 0.6-10

	* predict.wa: Predictions with tolerance DW now works for CV = "LOO"

	* wa.formula: Argument list updated to match wa.default.

	* fixUpTol: New internal utility function the encapsulates code to
	modify working tolerances within WA model fitting.

	* w.tol: Internal function w.tol now uses a faster C version of the
	code.

Version 0.6-9 (Closed Sun 7 June 2009)

	* predict.wa: Predictions without CV can now be made for WA models
	fitted using tolerance DW.
